Fix CSS appearance for all browsers

--- a/exp_project/index.html
+++ b/exp_project/index.html
@@ -14,7 +14,7 @@
     <div class="this-form">
         <div class="error-box">
         </div>
-        <form id="form" name="form">
+        <form id="form" class="form">
             <h1>Enter your name</h1>
             <input id="input-area1" type="text" name="first-number-entry">
             <h1>Enter your question</h1>
