--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
                         </div>
                         <div class="col-60">
                             <input id="input-area2" type="text" name="second-number-entry" class="input2">
+                            <input id="submit-button" type="button" value="Ask Me">
                         </div>
+                        
                     </div>
 
                 <!-- <div class="button-wrapper"> -->
-                <button id="submit-button" type="button"><b>Ask Me</b></button>
+               
                 <!-- </div> -->
             </form>
         </div>
