--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="input">
-                    <label for="input-area2" class="label">Enter your question</label>
+                    <label for="input-area2" class="label">Enter a Yes/No question</label>
 
                     <input id="input-area2" type="text" name="second-number-entry" class="input2">
                 </div>
